<resources>
    <string name="app_name">vDolgah</string>
    <string name="action_settings">Settings</string>
    <string name="to_me_debts">Мне должны</string>
    <string name="my_debts">Я должен</string>

    <string name="add_debt">Добавить долг</string>
    <string name="update_debt">Обновить запись</string>
    <string name="debtor_name">Введите имя</string>
    <string name="debtor_sum">Введите сумму долга</string>
    <string name="debtor_email">Введите email (необязательно)</string>
    <string name="debtor_date">Введите дату</string>
    <string name="add_debtor_page_name">Добавить долг</string>
    <string name="add">Добавить</string>
    <string name="send_email">Отправить напоминание</string>
    <string name="currency">руб.</string>
    <string name="if_anon">Анонимно</string>
    <string name="total_text"><u>Всего:</u> </string>
    <string name="total_sum">0</string>
    <string name="how_much_emails_have_founded">Записей с таким email:</string>
    <string name="debug">0</string>
    <string name="which_emails">Выберите долги</string>
</resources>
