<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".details.EmailChoosingDialog"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="8dp">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_much_emails_have_founded"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/how_much_emails_have_founded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="23sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/which_emails"
        android:textSize="18sp"
        android:layout_below="@+id/linearlayout1"/>



    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:minHeight="300dp"
        android:layout_above="@+id/send_checked_emails"
        android:layout_below="@id/textView1"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/send_checked_emails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:minHeight="70dp"
        android:maxWidth="190dp"
        android:text="@string/send_email"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>